@@ -29,7 +29,7 @@
     <attribute name="title">
      <string>MIPS</string>
     </attribute>
-    <widget class="QWidget" name="gridLayoutWidget">
+    <widget class="QWidget" name="gridLayoutWidget_1">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -44,74 +44,97 @@
         <property name="title">
          <string>Exception Handler</string>
         </property>
-        <widget class="QWidget" name="gridLayoutWidget_3">
+        <widget class="QWidget" name="gridLayoutWidget_2">
          <property name="geometry">
           <rect>
            <x>20</x>
            <y>20</y>
            <width>481</width>
-           <height>61</height>
+           <height>72</height>
           </rect>
          </property>
-         <layout class="QGridLayout" name="gridLayout_3">
-          <item row="0" column="0">
-           <widget class="QCheckBox" name="loadExceptionHandlerCheckBox">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Load Exception Handler</string>
-            </property>
-           </widget>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <layout class="QGridLayout" name="gridLayout_3">
+            <item row="0" column="3">
+             <widget class="QLineEdit" name="exceptionHandlerLineEdit">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>1</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QCheckBox" name="loadExceptionHandlerCheckBox">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Load Exception Handler</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_2">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>File</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="4">
+             <widget class="QToolButton" name="exceptionHandlerToolButton">
+              <property name="minimumSize">
+               <size>
+                <width>26</width>
+                <height>22</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <spacer name="horizontalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
-          <item row="0" column="2">
-           <widget class="QLabel" name="label_2">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>File</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QToolButton" name="exceptionHandlerToolButton">
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <widget class="QLineEdit" name="exceptionHandlerLineEdit">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>1</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <spacer name="horizontalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
+          <item alignment="Qt::AlignHCenter">
+           <widget class="QPushButton" name="exceptionHandlerResetButton">
+            <property name="minimumSize">
              <size>
-              <width>20</width>
-              <height>20</height>
+              <width>200</width>
+              <height>32</height>
              </size>
             </property>
-           </spacer>
+            <property name="text">
+             <string>Use default exception handler</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -122,7 +145,7 @@
         <property name="title">
          <string>MIPS Simulation Settings</string>
         </property>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget_1">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -131,7 +154,7 @@
            <height>141</height>
           </rect>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <layout class="QVBoxLayout" name="verticalLayout_1">
           <item>
            <layout class="QGridLayout" name="gridLayout_2">
             <item row="0" column="0">
@@ -175,6 +198,12 @@
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
              <widget class="QPushButton" name="simplePushButton">
+              <property name="minimumSize">
+               <size>
+                <width>239</width>
+                <height>32</height>
+               </size>
+              </property>
               <property name="text">
                <string>Simple Machine</string>
               </property>
@@ -182,6 +211,12 @@
             </item>
             <item>
              <widget class="QPushButton" name="barePushButton">
+              <property name="minimumSize">
+               <size>
+                <width>238</width>
+                <height>32</height>
+               </size>
+              </property>
               <property name="text">
                <string>Bare Machine</string>
               </property>
@@ -200,7 +235,7 @@
     <attribute name="title">
      <string>QtSpim</string>
     </attribute>
-    <widget class="QWidget" name="verticalLayoutWidget">
+    <widget class="QWidget" name="verticalLayoutWidget_1">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -209,13 +244,13 @@
        <height>371</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
          <string>Simulator</string>
         </property>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget_2">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -251,8 +286,8 @@
               </property>
               <property name="sizeHint" stdset="0">
                <size>
-                <width>40</width>
-                <height>20</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
              </spacer>
@@ -279,7 +314,7 @@
         <property name="title">
          <string>Register Windows</string>
         </property>
-        <widget class="QWidget" name="gridLayoutWidget_4">
+        <widget class="QWidget" name="gridLayoutWidget_3">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -289,17 +324,13 @@
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="2">
-           <widget class="QToolButton" name="regWinFontToolButton">
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="QToolButton" name="regWinBackgroundToolButton">
-            <property name="text">
-             <string>...</string>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="regWinBackgroundLineEdit">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
            </widget>
           </item>
@@ -313,23 +344,6 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="regWinBackgroundLineEdit">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Font</string>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
@@ -340,35 +354,61 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="5">
-           <widget class="QLineEdit" name="regWinFontColorLineEdit"/>
-          </item>
-          <item row="0" column="4">
-           <widget class="QLabel" name="label_7">
+          <item row="1" column="2">
+           <widget class="QToolButton" name="regWinBackgroundToolButton">
+            <property name="minimumSize">
+             <size>
+              <width>26</width>
+              <height>22</height>
+             </size>
+            </property>
             <property name="text">
-             <string>Color</string>
+             <string>...</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="6">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Font</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
+           <widget class="QLineEdit" name="regWinFontColorLineEdit"/>
+          </item>
+          <item row="0" column="5">
            <widget class="QToolButton" name="regWinFontColorToolButton">
+            <property name="minimumSize">
+             <size>
+              <width>26</width>
+              <height>22</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
           <item row="0" column="3">
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Color</string>
             </property>
-            <property name="sizeHint" stdset="0">
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QToolButton" name="regWinFontToolButton">
+            <property name="minimumSize">
              <size>
-              <width>40</width>
-              <height>20</height>
+              <width>26</width>
+              <height>22</height>
              </size>
             </property>
-           </spacer>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -379,7 +419,7 @@
         <property name="title">
          <string>Text and Data Windows</string>
         </property>
-        <widget class="QWidget" name="gridLayoutWidget_5">
+        <widget class="QWidget" name="gridLayoutWidget_4">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -389,15 +429,74 @@
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="0" column="2">
-           <widget class="QToolButton" name="textWinFontToolButton">
+          <item row="0" column="5">
+           <widget class="QToolButton" name="textWinFontColorToolButton">
+            <property name="minimumSize">
+             <size>
+              <width>26</width>
+              <height>22</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="4">
+           <widget class="QLineEdit" name="textWinFontColorLineEdit"/>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="textWinBackgroundLineEdit">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Background Color</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="2">
            <widget class="QToolButton" name="textWinBackgroundToolButton">
+            <property name="minimumSize">
+             <size>
+              <width>26</width>
+              <height>22</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>Color</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>Font</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QToolButton" name="textWinFontToolButton">
+            <property name="minimumSize">
+             <size>
+              <width>26</width>
+              <height>22</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -412,60 +511,6 @@
              </sizepolicy>
             </property>
            </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="textWinBackgroundLineEdit">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>Font</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>Background Color</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>Color</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="5">
-           <widget class="QLineEdit" name="textWinFontColorLineEdit"/>
-          </item>
-          <item row="0" column="6">
-           <widget class="QToolButton" name="textWinFontColorToolButton">
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </widget>
@@ -483,6 +528,12 @@
      <width>180</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>180</width>
+     <height>23</height>
+    </size>
    </property>
    <property name="standardButtons">
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -511,6 +562,7 @@
   <tabstop>loadExceptionHandlerCheckBox</tabstop>
   <tabstop>exceptionHandlerLineEdit</tabstop>
   <tabstop>exceptionHandlerToolButton</tabstop>
+  <tabstop>exceptionHandlerResetButton</tabstop>
   <tabstop>buttonBox</tabstop>
   <tabstop>recentFilesLineEdit</tabstop>
   <tabstop>regWinFontLineEdit</tabstop>
